# SISE_DiagnoSys

./: .env.exemple  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  run.py  test.py  workflow.md
alembic/: env.py
alembic/versions/: 15b2d22b9902_ajout_nouvelle_colonne.py  72705f951d9c_ajout_colonne_archived.py  89b3ed62e618_ajout_de_la_colonne_diagnostic.py  8d8067aec651_merge_heads.py  b560e8eb7618_ajout_de_la_colonne_diagnostic.py  b69dcf0773e8_add_similarity_score_to_association_.py  d52bfec0df79_add_patients_proches_and_documents_.py  e637b4eaa2de_adding_contexte_field_for_patients.py  f4f97cf5d3cb_enforce_nom_prenom_field_being_mandatory.py
app/: ajax.py  init.py  routes.py
app/asr/: README.md  __init__.py  asr_models.py  asr_services.py  base.py  base_asr.py  factory.py
app/config/: __init__.py  database.py  logging_config.py  vector_db.py
app/dummy/: db.py
data/: benchmark_embeddings.json  benchmark_embeddings_en.json  comparison_dict.json  diagnosys.db
explore/: 0_benchmark.ipynb  1_guardrail-multi-lang.ipynb  2_guardrail-english.ipynb  3_guardrail-custom.ipynb  EMBEDDING_BENCHMARK_REPORT.md  GUARDRAIL_REPORT.md  benchmark_embeddings.py  benchmark_models.py  create_medical_consultation_dataset.py  guardrail_feature_extractor_v2.joblib  improved_guardrail_training.py  medical_consultations_benign.csv  prompt-injections-benchmark.csv  svc_custom.joblib  svc_model.joblib  xgboost_custom.joblib
scripts/: scrap_sp.py  seed_daily_metrics.py  seed_db.py  seed_llm_usage.py
(+87 files in other folders)
