[project]
name = "sise-diagnosys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "sqlalchemy>=2.0.45",
    "flask-sock>=0.7.0",
    "pydantic>=2.12.5",
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "alembic>=1.18.1",
    "chromadb>=1.4.1",
    "sentence-transformers>=5.2.0",
    "mistralai>=1.10.1",
    "gunicorn>=21.2.0",
    "gevent-websocket>=0.10.1",
    "pandas>=3.0.0",
    "sherpa-onnx>=1.12.23",
]
